# python-edulink

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/edulink/: __init__.py  student.py
tests/: timetable.py
